# codepoint-iterator

./: CMakeLists.txt  LICENSE  README.md  test.cpp
src/: codepoint_iterator.cpp  codepoint_iterator.h  utility.h
